tests/compile-error/compile_error.h
#ifndef COMPILE_ERROR_H
#define COMPILE_ERROR_H

int add(int x, int y);

#endif
